colour changes to cards and body and some spacing issues resolved in new iitems, buttons also restyled

--- a/app/assets/stylesheets/components/_index_card_bordered.scss
+++ b/app/assets/stylesheets/components/_index_card_bordered.scss
@@ -1,10 +1,3 @@
-.index-card-bordered {
-  border-left: 1px solid #dee2e6;
-  border-right: 1px solid #e9edf0;
-  background-color: $light-blue-refinder;
-
-}
-
 
 .card-title-bold {
   font-weight: bold;
@@ -21,8 +14,8 @@
 
 
 .card-header {
- box-sizing: border-box;
- background-color: #ffffff;
+ //box-sizing: border-box;
+ background-color: $beige;
 }
 
 
@@ -32,5 +25,41 @@
  }
 
  .card-body {
+  background-color: $beige;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+ }
+
+ .card-header-top-menu {
   background-color: $light-blue-refinder;
+ }
+
+ body {
+  background-color: $light-blue-refinder;
+ }
+
+ // search bar
+
+ .form-control::placeholder {
+ color: gray;
+ }
+
+ .form-control-search-bar {
+  border-radius: 5px;
+  border-color: $navy;
+  border-width: 2px;
+ }
+
+
+ //h1 for my_items
+
+ .custom-h1 {
+  text-align: center;
+  margin-top: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  text-underline-position: below;
  }
