--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,10 +10,3 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
-
-.nav-item-dropdown{
-  // @media (max-width: 400px) {
-  //     float: none;
-  //     text-align: right;
-  //   }
-  }
